Update love compatibility report to use real analysis data instead of dummy data

--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.60.0",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
+    "axios": "^1.11.0",
     "next": "15.5.0",
+    "openai": "^5.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
