--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "15.5.0",
     "openai": "^5.15.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
