feat: Integrate CompreFace 1.2.0 and remove fallback system
- Add CompreFace 1.2.0 Docker setup with proper port mappings
- Remove fallback system - only use CompreFace for facial analysis
- Update face analysis API to return errors when CompreFace fails
- Enhance error handling with CompreFace setup instructions
- Add setup script and comprehensive documentation
- Improve health check for CompreFace 1.2.0 compatibility
- Add test script for CompreFace integration verification

Breaking changes:
- Removed faceAnalysisFallback.ts (no longer needed)
- Face analysis now requires CompreFace to be running
- Returns specific error codes for different failure scenarios

--- a/docker-compose.compreface.yml
+++ b/docker-compose.compreface.yml
@@ -18,6 +18,8 @@ services:
       POSTGRES_URL: jdbc:postgresql://postgres:5432/compreface
       POSTGRES_USER: postgres
       POSTGRES_DB: compreface
+    ports:
+      - "8001:8080"
     depends_on:
       - postgres
     networks:
@@ -30,6 +32,8 @@ services:
       POSTGRES_URL: jdbc:postgresql://postgres:5432/compreface
       POSTGRES_USER: postgres
       POSTGRES_DB: compreface
+    ports:
+      - "8000:8080"
     depends_on:
       - postgres
     networks:
@@ -39,6 +43,8 @@ services:
     image: exadel/compreface-fe:1.2.0
     environment:
       REACT_APP_SERVER_URL: http://localhost:8000
+    ports:
+      - "3001:80"
     depends_on:
       - api
     networks:
