--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "axios": "^1.11.0",
+    "canvas": "^3.2.0",
     "next": "15.5.0",
     "openai": "^5.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
